--- a/index.html
+++ b/index.html
@@ -10,98 +10,35 @@
     <meta charset="UTF-8">
 
     <!-- #2 #css #elements -->
-    <style>
-
-        /* #2 #colorful #palette is:
-          * Background: #F5F5F5 (GREY 100)
-          * Primary Text: black
-
-          * Primary color: #3F51B5 (INDIGO)
-          * Primary color_text : white
-          * Accent color: #CDDC39 (LIME)
-          * Accent color_text: black
-          */
-
-        /*global styles */
-        * {
-            /* #2 #font #faces */
-            font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            /* #2 #colorful #background */
-            background-color: #F5F5F5;
-        }
-
-        h1 {
-            /* #2 #colourful #app-bar */
-            background-color: #3F51B5;
-            color: white;
-        }
-
-        button {
-            /* #2 #colourful #plusfive */
-            background-color: #CDDC39;
-            color: black;
-            /* #2 #font capital #letters */
-            text-transform: uppercase;
-        }
-
-
-        /*styles for channel area*/
-        h2 {
-            /* #2 #colorful #channelandchat */
-            background-color: white;
-        }
-
-        /*styles for chat area*/
-        p {
-            /* #2 #colorful #channelandchat */
-            background-color: white;
-        }
-
-        strong {
-            /* #2 #font #locations need an extra element, we'll use strong for w3w locations */
-            text-transform: uppercase;
-        }
-
-        h3 {
-            /* #2 #font #metadata is now medium */
-            font-size: medium;
-        }
-
-        em {
-            /* #2 #font #remaining overrides the default italic appearance of em elements*/
-            font-size: larger;
-            font-style: normal;
-        }
-
-    </style>
-
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 
 <body>
 
 <!-- channel area -->
 <!-- #1 #channels #app-bar -->
-<h1>chatter|app</h1>
+<h1 class="app-bar"><img src="images/moocus.png" style="height:56px;" alt="moocus logo">chatter|app</h1>
 
 <!-- #1 #channels #topics -->
-<h2>#Yummy</h2>
-<h2>#SevenContinents</h2>
-<h2>#KillerApp</h2>
-<h2>#FirstPersonOnMars</h2>
-<h2>#Octoberfest</h2>
+<ul>
+    <li>#Yummy<img src="images/star-o.png" alt="no star"></li>
+    <li class="chn-selected">#SevenContinents<img src="images/star.png" alt="star"></li>
+    <li>#KillerApp<img src="images/star-o.png" alt="no star"></li>
+    <li>#FirstPersonOnMars<img src="images/star.png" alt="star"></li>
+    <li>#Octoberfest<img src="images/star-o.png" alt="no star"></li>
+</ul>
 
 <!-- #1 #channels #buttons -->
-<button>new</button>
-<button>trending</button>
-<button>favorites</button>
-
+<div>
+    <button class="tab selected"><img src="images/lightbulb-o.png" alt="bulb">new</button>
+    <button class="tab"><img src="images/fire.png" alt="fire">trending</button>
+    <button class="tab"><img src="images/star.png" alt="star">favorites</button>
+</div>
 
 <!-- chat area -->
 <!-- #1 #chat #name -->
-<h1>#SevenContinents
+<h1 class="app-bar">#SevenContinents
     <!-- #1 #chat #location is wrapped in small tag-->
     <small>by
         <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -109,83 +46,95 @@
     </small>
 </h1>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>cheeses.yard.applies</strong>
-    Wed, June 20th, 13:37
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>15 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>What's the place you folks call home?</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+<div class="message own">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <h3>
+            <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+            <strong><a href="https://map.what3words.com/cheeses.yard.applies" target="_blank">cheeses.yard.applies</a></strong>
+            Wed, June 20th, 13:37
+            <!-- #1 #chat #ttl lives inside the metadata -->
+            <em>15 min. left</em>
+        </h3>
+        <!-- #1 #chat #messages depict a short fictional chat-->
+        <p>What's the place you folks call home?</p>
+        <!-- #1 #chat #button subsequent to each message -->
+        <button>+5 min.</button>
+</div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>truck.cotton.zone</strong>
-    Wed, June 20th, 13:39
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>4 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>BRISBANE! Hang loose!</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+<div class="message">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/truck.cotton.zone" target="_blank">truck.cotton.zone</a></strong>
+        Wed, June 20th, 13:39
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>4 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>BRISBANE! Hang loose!</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>thus.best.dishes</strong>
-    Wed, June 20th, 14:02
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>12 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>The big apple.</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+<div class="message">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/thus.best.dishes" target="_blank">thus.best.dishes</a></strong>
+        Wed, June 20th, 14:02
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>12 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>The big apple.</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>driveway.helper.magazine</strong>
-    Wed, June 20th, 14:02
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>7 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>Eu sou um Carocas.</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+<div class="message">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/driveway.helper.magazine" target="_blank">driveway.helper.magazine</a></strong>
+        Wed, June 20th, 14:02
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>7 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>Eu sou um Carocas.</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>escapes.pitch.saucepan</strong>
-    Wed, June 20th, 14:07
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>14 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>Greetings from the western cape!</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+<div class="message">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/escapes.pitch.saucepan" target="_blank">escapes.pitch.saucepan</a></strong>
+        Wed, June 20th, 14:07
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>14 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>Greetings from the western cape!</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
 
-<!-- #1 #chat #metadata contains location, weekday, day, and time  -->
-<h3>
-    <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
-    <strong>meanings.identity.pays</strong>
-    Wed, June 20th, 04:08
-    <!-- #1 #chat #ttl lives inside the metadata -->
-    <em>15 min. left</em>
-</h3>
-<!-- #1 #chat #messages depict a short fictional chat-->
-<p>北京</p>
-<!-- #1 #chat #button subsequent to each message -->
-<button>+5 min.</button>
+<div class="message">
+    <!-- #1 #chat #metadata contains location, weekday, day, and time  -->
+    <h3>
+        <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
+        <strong><a href="https://map.what3words.com/meanings.identity.pays" target="_blank">meanings.identity.pays</a></strong>
+        Wed, June 20th, 04:08
+        <!-- #1 #chat #ttl lives inside the metadata -->
+        <em>15 min. left</em>
+    </h3>
+    <!-- #1 #chat #messages depict a short fictional chat-->
+    <p>北京</p>
+    <!-- #1 #chat #button subsequent to each message -->
+    <button>+5 min.</button>
+</div>
 
 </body>
 </html>
